# rs-mender

./: Cargo.toml
src/: lib.rs
src/core/: dataset.rs  item_index.rs  mod.rs  model.rs  similarity.rs
src/engine/: cosine_similarity_engine.rs  matrix_factorization_engine.rs  mod.rs
src/utils/: dataset.rs  math.rs  metrics.rs  mod.rs
tests/: integration_test.rs
tests/test_utils/: mod.rs
