[package]
name = "rs-mender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
csv = "1.2.2"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
threadpool = "1.8.1"
