[package]
name = "rs-mender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
csv = "1.2.2"
itertools = "0.11.0"
ndarray = { version = "0.15.6", features = ["serde", "serde-1"] }
ndarray-rand = "0.14.0"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
sprs = { version = "0.11.1", features = ["serde"] }
threadpool = "1.8.1"
